personal profile 1 complete

--- a/support.html
+++ b/support.html
@@ -17,6 +17,7 @@
                     <li><a href="media.html" target="_self">Check us out in action</a></li>
                     <li><a href="social.html" target="_self">Support Us</a></li>
                     <li><a href="support.html" target="_self">You are not alone</a></li>
+                    <li><a href="1vs1.html" target="_self">1 on 1</a></li>
                 </ul>
             </nav>
             <h1>Resources for help</h1>
